# umlaute

./: .gitignore  Cargo.toml  input  package-lock.json  package.json  webpack.config.js
src/: app.rs  lib.rs  main.rs  umlaut_replacer.rs
static/: umlaute.js  umlaute.wasm
static/deploy/: index.html  umlaute.wasm
