[package]
name = "umlaute"
version = "0.1.0"
authors = ["DomiDre <homiedomi@gmail.com>"]
edition = "2018"
description = "Mini app to substitute german umlaute into a text"
repository = "https://github.com/domidre/umlaute"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.11.0"
wasm-bindgen = "0.2.57"